--- a/build.gradle
+++ b/build.gradle
@@ -9,3 +9,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
 }
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
